<resources>
    <string name="app_name">알바 정산</string>
    <string name="btn_ok">확인</string>

    <!--activity_main.xml-->
    <string name="main_btn_calculate">마감 정산</string>
    <string name="main_btn_rotate_calculate">교대 정산</string>
    <string name="main_btn_close">마감</string>

    <!--activity_calculate.xml-->
    <string name="calculate_tab1_lotto">로또</string>
    <string name="calculate_tab2_pos">포스</string>
    <string name="calculate_tab3_lottery">복권</string>
    <string name="calculate_tab4_toto">토토</string>

    <!--list_item_close.xml-->
    <string name="list_item_close_num">1</string>
    <string name="list_item_close_text">내용</string>

    <!--custom_edit_view.xml-->
    <string name="custom_edit_hint">ex)10000</string>
    <!--custom_lottery_view.xml-->
    <string name="custom_lottery_hint">0</string>
    <string name="custom_lottery_hint_set">세트</string>
    <string name="custom_lottery_hint_not_set">낱개</string>
    <string name="custom_lottery_2000">2000</string>
    <string name="custom_lottery_2000x">x 2 +</string>
    <string name="custom_lottery_1000">1000</string>
    <string name="custom_lottery_1000x">x 4 +</string>
    <string name="custom_lottery_year">연금</string>
    <string name="custom_lottery_yearx">x 5 +</string>
    <string name="custom_lottery_count">개</string>
    <string name="custom_lottery_type">정산 타입</string>
    <string name="custom_lottery_result">계산 결과</string>
    <!--custom_money_count_view.xml-->
    <string name="custom_money_count_50000">50,000원</string>
    <string name="custom_money_count_10000">10,000원</string>
    <string name="custom_money_count_5000">5,000원</string>
    <string name="custom_money_count_1000">1,000원</string>
    <string name="custom_money_count_else">동전</string>

    <!--교대 정산-->
    <!--1, 로또 교대 정산 순서-->
    <!--fragment_tab1_lotto_rotate.xml-->
    <string name="tab1_lotto_rotate_1">돈 세기</string>
    <!--2, 포스 교대 정산 순서-->
    <!--fragment_tab2_pos_rotate.xml-->
    <string name="tab2_pos_rotate_1">로그인 후 현금값</string>
    <string name="tab2_pos_rotate_1_type">+ 50,000</string>
    <string name="tab2_pos_rotate_2">돈 세기</string>
    <string name="tab2_pos_rotate_500">500원</string>
    <string name="tab2_pos_rotate_100">100원</string>
    <string name="tab2_pos_rotate_50">50원</string>
    <string name="tab2_pos_rotate_10">10원</string>
    <!--3, 복권 교대 정산 순서-->
    <!--fragment_tab3_lottery_rotate.xml-->
    <string name="tab3_lottery_rotate_1">재고 금액 세기</string>
    <string name="tab3_lottery_rotate_2">돈 세기</string>
    <string name="tab3_lottery_rotate_3">당첨 금액</string>
    <string name="tab3_lottery_rotate_4">이전 근무자 재고 금액</string>
    <!--4, 토토 교대 정산 순서-->
    <!--fragment_tab4_toto_rotate.xml-->
    <string name="tab4_toto_rotate_1">내가 뽑은 \'현시점 매출 조회\'</string>
    <string name="tab4_toto_rotate_1_1">전체 현금</string>
    <string name="tab4_toto_rotate_1_2">전체 환급 + 환불</string>
    <string name="tab4_toto_rotate_1_type">전체 판매금</string>
    <string name="tab4_toto_rotate_2">이전 \'현시점 매출 조회\'</string>
    <string name="tab4_toto_rotate_2_type">이전 판매금</string>
    <string name="tab4_toto_rotate_3">1번 - 2번</string>
    <string name="tab4_toto_rotate_4">돈 세기</string>

    <!--마감 정산-->
    <!--1, 로또 정산 순서-->
    <!--fragment_tab1_lotto.xml-->
    <string name="tab1_lotto_1">돈 세기</string>
    <string name="tab1_lotto_2">보고서 &gt; 영업 보고서 &gt; 2장 인쇄</string>
    <string name="tab1_lotto_2_1">1장 보관</string>
    <string name="tab1_lotto_2_2">1장 여백에 돈 센 거 적기</string>
    <string name="tab1_lotto_3">거래내역 적기(확인용)</string>
    <string name="tab1_lotto_4">거래내역 삭제</string>
    <string name="tab1_lotto_5">돈 빼고 묶기</string>
    <string name="tab1_lotto_6">로또인수인계대장 + 야간 체크</string>
    <string name="tab1_lotto_6_1">야간 판매</string>
    <string name="tab1_lotto_6_2">야간 잔액</string>
    <!--2, 포스 정산 순서-->
    <!--fragment_tab2_pos.xml-->
    <string name="tab2_pos_1">동전 분류</string>
    <string name="tab2_pos_2">\'메뉴\' &gt; \'마감정산\' &gt; 돈입력</string>
    <string name="tab2_pos_3">엔터 &gt; 다음 근무자 로그인</string>
    <string name="tab2_pos_4">#마감 입금# - 50,000 뺀 금액 적기</string>
    <string name="tab2_pos_4_1">#마감 입금#</string>
    <string name="tab2_pos_4_2">\- 50,000 =</string>
    <string name="tab2_pos_4_3">계산 결과</string>
    <string name="tab2_pos_5">#계산원 정산 현황#의 \'현금매출\'과 비교</string>
    <string name="tab2_pos_5_1">\'현금매출\'</string>
    <string name="tab2_pos_6">돈 빼고 묶기</string>
    <!--3, 복권 정산 순서-->
    <!--fragment_tab3_lottery.xml-->
    <string name="tab3_lottery_1">당첨 복권 지급 처리</string>
    <string name="tab3_lottery_2">추가한 금액 적기</string>
    <string name="tab3_lottery_2_1">추가 금액</string>
    <string name="tab3_lottery_3">복권 재고 세고, 재고 금액 적기</string>
    <string name="tab3_lottery_3_1">재고 금액</string>
    <string name="tab3_lottery_4">현금 판매액 적기</string>
    <string name="tab3_lottery_5">당복지급액 적기</string>
    <string name="tab3_lottery_6">당첨금 지금 초기화</string>
    <string name="tab3_lottery_7">돈, 당첨복권 빼고 묶기</string>
    <string name="tab3_lottery_8">이전 근무자 재고 금액</string>
    <string name="tab3_lottery_result">결과</string>
    <!--4, 토토 정산 순서-->
    <string name="tab4_toto_1">돈 세기</string>
    <string name="tab4_toto_2">\'현시점 매출 조회\' &gt; 2장 출력</string>
    <string name="tab4_toto_2_1">1장 보관</string>
    <string name="tab4_toto_2_2">1장 여백에 돈 센 거 적기</string>
    <string name="tab4_toto_3">돈 빼고 묶기</string>
    <string name="tab4_toto_4">토토인수인계대장</string>
    <string name="tab4_toto_4_2_1">전체 판매금</string>
    <string name="tab4_toto_4_2_2">이전 전체 판매금</string>
    <string name="tab4_toto_4_2_result">현시점 판매금</string>
    <string name="tab4_toto_4_3_1">전체 환급</string>
    <string name="tab4_toto_4_3_2">전체 환불</string>
    <string name="tab4_toto_4_3_result">전체 환급 + 환불</string>
    <string name="tab4_toto_4_4">이전 전체 환급 + 환불</string>
    <string name="tab4_toto_4_4_result">현시점 환급 + 환불</string>
    <string name="tab4_toto_count">원</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>