<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".close_calculate.Tab1LottoFragment">

    <!--1, 로또 정산 순서-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.mycalculate.custom.CustomMoneyCountView
            android:id="@+id/step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text_money_count="@string/tab1_lotto_1"
            app:num_money_count="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.mycalculate.custom.CustomOptionView
            android:id="@+id/step2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text_option="@string/tab1_lotto_2"
            app:num_option="2"
            app:option1_text="@string/tab1_lotto_2_1"
            app:option2_text="@string/tab1_lotto_2_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step1"/>

        <com.example.mycalculate.custom.CustomBasicView
            android:id="@+id/step3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:num_basic="3"
            app:text_basic="@string/tab1_lotto_3"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step2" />
        <EditText
            android:id="@+id/step3EditCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:inputType="number"
            android:hint="@string/custom_lottery_hint"
            app:layout_constraintEnd_toStartOf="@+id/step3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step3" />

        <com.example.mycalculate.custom.CustomBasicView
            android:id="@+id/step4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step3EditCheck"
            app:num_basic="4"
            app:text_basic="@string/tab1_lotto_4" />

        <com.example.mycalculate.custom.CustomBasicView
            android:id="@+id/step5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text_basic="@string/tab1_lotto_5"
            app:num_basic="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step4" />

        <com.example.mycalculate.custom.CustomBasicView
            android:id="@+id/step6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text_basic="@string/tab1_lotto_6"
            app:num_basic="6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step5" />

        <EditText
            android:id="@+id/step6EditSale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:inputType="number"
            android:hint="@string/tab1_lotto_6_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step6" />
        <EditText
            android:id="@+id/step6EditBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/tab1_lotto_6_2"
            android:inputType="phone"
            android:digits="0123456789+"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/step6EditSale"
            app:layout_constraintTop_toBottomOf="@+id/step6" />

        <TextView
            android:id="@+id/textResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:text="@string/tab3_lottery_result"
            android:padding="20dp"
            app:layout_constraintEnd_toStartOf="@+id/btnOk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step6EditSale" />
        <Button
            android:id="@+id/btnOk"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/textResult"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>