<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".close_calculate.Tab3LotteryFragment">

    <!--3, 복권 정산 순서-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.mycalculate.custom.CustomBasicView
            android:id="@+id/step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:num_basic="1"
            app:text_basic="@string/tab3_lottery_1" />

        <com.example.mycalculate.custom.CustomLotteryView
            android:id="@+id/step2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:num_lottery="2"
            app:text_lottery="@string/tab3_lottery_2"
            app:type_lottery="@string/tab3_lottery_2_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step1" />

        <com.example.mycalculate.custom.CustomLotteryView
            android:id="@+id/step3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:num_lottery="3"
            app:text_lottery="@string/tab3_lottery_3"
            app:type_lottery="@string/tab3_lottery_3_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step2" />

        <com.example.mycalculate.custom.CustomMoneyCountView
            android:id="@+id/step4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:num_money_count="4"
            app:text_money_count="@string/tab3_lottery_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step3"/>

        <com.example.mycalculate.custom.CustomEditView
            android:id="@+id/step5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:num_edit="5"
            app:text_edit="@string/tab3_lottery_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step4"/>

        <com.example.mycalculate.custom.CustomBasicView
            android:id="@+id/step6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:num_basic="6"
            app:text_basic="@string/tab3_lottery_6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step5"/>

        <com.example.mycalculate.custom.CustomBasicView
            android:id="@+id/step7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:num_basic="7"
            app:text_basic="@string/tab3_lottery_7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step6"/>

        <com.example.mycalculate.custom.CustomBasicView
            android:id="@+id/step8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:num_basic="8"
            app:text_basic="@string/tab3_lottery_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step7"/>

        <EditText
            android:id="@+id/edtTextPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:hint="@string/tab3_lottery_8_1"
            android:textSize="18sp"
            android:inputType="number"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step8"/>

        <Button
            android:id="@+id/btnCheck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tab3_lottery_8"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/edtTextPrev"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edtTextPrev" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:paddingBottom="10dp"
            android:text="@string/tab3_lottery_result"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTextPrev" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>