<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_close_num"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/list_item_close_text"
        android:textSize="18sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvNum"
        app:layout_constraintEnd_toStartOf="@+id/checkBox"
        app:layout_constraintStart_toEndOf="@+id/tvNum"
        app:layout_constraintTop_toTopOf="@+id/tvNum" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="@+id/tvText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvText" />

    <!--2000-->
    <TextView
        android:id="@+id/tv2000"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/custom_lottery_2000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edt2000_set"
        app:layout_constraintStart_toStartOf="@+id/tvText"
        app:layout_constraintTop_toTopOf="@+id/edt2000_set" />
    <EditText
        android:id="@+id/edt2000_set"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/custom_lottery_hint_set"
        android:textSize="18sp"
        android:inputType="number"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/tv2000"
        app:layout_constraintTop_toBottomOf="@+id/tvText" />
    <TextView
        android:id="@+id/text2000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/custom_lottery_2000x"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edt2000_set"
        app:layout_constraintStart_toEndOf="@+id/edt2000_set"
        app:layout_constraintTop_toTopOf="@+id/edt2000_set" />

    <EditText
        android:id="@+id/edt2000"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/custom_lottery_hint_not_set"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edt2000_set"
        app:layout_constraintStart_toEndOf="@+id/text2000"
        app:layout_constraintTop_toBottomOf="@+id/tvText" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/custom_lottery_count"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edt2000"
        app:layout_constraintStart_toEndOf="@+id/edt2000"
        app:layout_constraintTop_toTopOf="@+id/edt2000" />

    <!--1000-->
    <TextView
        android:id="@+id/tv1000"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/custom_lottery_1000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edt1000_set"
        app:layout_constraintStart_toStartOf="@+id/tvText"
        app:layout_constraintTop_toBottomOf="@+id/tv2000" />
    <EditText
        android:id="@+id/edt1000_set"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/custom_lottery_hint_set"
        android:textSize="18sp"
        android:inputType="number"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/tv1000"
        app:layout_constraintTop_toBottomOf="@+id/edt2000_set" />
    <TextView
        android:id="@+id/text1000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/custom_lottery_1000x"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edt1000_set"
        app:layout_constraintStart_toEndOf="@+id/edt1000_set"
        app:layout_constraintTop_toTopOf="@+id/edt1000_set" />

    <EditText
        android:id="@+id/edt1000"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/custom_lottery_hint_not_set"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edt1000_set"
        app:layout_constraintStart_toEndOf="@+id/text1000"
        app:layout_constraintTop_toBottomOf="@+id/edt2000" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/custom_lottery_count"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edt1000"
        app:layout_constraintStart_toEndOf="@+id/edt1000"
        app:layout_constraintTop_toTopOf="@+id/edt1000" />

    <!--연금-->
    <TextView
        android:id="@+id/tvYear"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/custom_lottery_year"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtYearSet"
        app:layout_constraintStart_toStartOf="@+id/tvText"
        app:layout_constraintTop_toBottomOf="@+id/tv1000" />
    <EditText
        android:id="@+id/edtYearSet"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/custom_lottery_hint_set"
        android:textSize="18sp"
        android:inputType="number"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/tvYear"
        app:layout_constraintTop_toBottomOf="@+id/edt1000_set" />
    <TextView
        android:id="@+id/textYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/custom_lottery_yearx"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtYearSet"
        app:layout_constraintStart_toEndOf="@+id/edtYearSet"
        app:layout_constraintTop_toTopOf="@+id/edtYearSet" />
    <EditText
        android:id="@+id/edtYear"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/custom_lottery_hint_not_set"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtYearSet"
        app:layout_constraintStart_toEndOf="@+id/textYear"
        app:layout_constraintTop_toBottomOf="@+id/edt1000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/custom_lottery_count"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtYear"
        app:layout_constraintStart_toEndOf="@+id/edtYear"
        app:layout_constraintTop_toTopOf="@+id/edtYear" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/edtYearSet"
        tools:layout_editor_absoluteX="30dp" />
    <TextView
        android:id="@+id/tvCalculateType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_lottery_type"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/tvYear"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tvCalculateResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_lottery_result"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCalculateType"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/tvCalculateType" />

</androidx.constraintlayout.widget.ConstraintLayout>